--- a/position-exercise.html
+++ b/position-exercise.html
@@ -12,9 +12,11 @@
 <body>
     <nav>
         <img class="logo" src="images/icon.png" alt="cat logo">
-        <a href="index.html" class="Home">Home</a>
-        <a href="display-exercise.html" class="display">display</a>
-        <a href="float-exercise.html" class="float">float</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="display-exercise.html">display</a></li>
+            <li><a href="float-exercise.html">float</a></li>
+        </ul>
     </nav>
 
     <main>
